--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "kraken-api" : "",
     "allcoin" : "",
+    "anx" : "",
     "bluebird" : "",
     "node-trade-util" : "git://github.com/you21979/node-trade-util.git"
   },
